--- a/reports/extentReport.html
+++ b/reports/extentReport.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary">E-commerce Selenium Test Automation Results</span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Sep 14, 2024 11:53:46 PM</span></a>
+<a href="#"><span class="badge badge-primary">Apr 6, 2025 07:53:01 pm</span></a>
 </li>
 </ul>
 </div>
@@ -81,7 +81,7 @@
           <div class="test-detail">
             <p class="name">guestCheckout</p>
             <p class="text-sm">
-              <span>11:53:50 PM</span> / <span>00:00:15:215</span>
+              <span>7:53:03 pm</span> / <span>00:00:11:048</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -90,9 +90,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">guestCheckout</h5>
-<span class='badge badge-success'>09.14.2024 11:53:50 PM</span>
-<span class='badge badge-danger'>09.14.2024 11:54:05 PM</span>
-<span class='badge badge-default'>00:00:15:215</span>
+<span class='badge badge-success'>04.06.2025 7:53:03 pm</span>
+<span class='badge badge-danger'>04.06.2025 7:53:14 pm</span>
+<span class='badge badge-default'>00:00:11:048</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -104,7 +104,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>11:54:05 PM</td>
+        <td>7:53:14 pm</td>
         <td>
           guestCheckout Test case passed
         </td>
@@ -128,13 +128,13 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Sep 14, 2024 11:53:46 PM</h3>
+<h3>Apr 6, 2025 07:53:01 pm</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Sep 14, 2024 11:54:05 PM</h3>
+<h3>Apr 6, 2025 07:53:14 pm</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -204,7 +204,7 @@
 </div></div>
 <script>
 var timeline = {
-"guestCheckout":15.215
+"guestCheckout":11.048
 };
 </script>
 <div class="row">
